# haneru

./: .env  Cargo.toml  Makefile  memo.md  schema.db  schema.sql
src/: db.rs  http.rs  log_chan.rs  main.rs  proxy.rs  proxy2.rs  sse.rs  template.rs  tls.rs
static/: layout.css
templates/: blank_request.html  detail.html  index.html  layout.html  live.html  request.html  request_log.html  request_tr.html  response.html
