[package]
name = "haneru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
askama = "0.12.1"
askama_axum = "0.3.0"
axum = "0.6.20"
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.28"
httparse = "1.8.0"
hyper = { version = "0.14.27", features = ["full"] }
rcgen = { version = "0.11.3", features = ["x509-parser"] }
rustls = "0.21.7"
tokio = { version = "1.33.0", features = ["full"] }
tokio-rustls = "0.24.1"
tower-http = { version = "0.4.4", features = ["fs"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "json"] }
serde = { version = "1.0.190", features = ["derive"] }
tokio-native-tls = "0.3.1"
