[package]
name = "haneru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["http2"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
rustls21 = { package = "rustls", version = "0.21" }
rcgen = "0.12.0"
rustls = "0.22.1"
tokio = { version = "1.35.1", features = ["full"] }
